src/compiler/tests/valid/arithmetic/arithmetic.klt
var globalA: Int;
var globalB: Int = 2;
var globalC: Int;

fun main (): None {
    var comentario: String;

    globalA = 3;
    globalB = globalA * 4;
    globalA = 8;
    globalC = globalA - (-1);
    print("La resta es %d", globalC);
    globalC = 4 / 5;
    print("La division es %d", globalC);
    globalC = 20 / 5;
    print("La division es %d", globalC);
    globalC = 4 * 5;
    print("La multiplicacion es %d", globalC);

    print("Global A es %d", globalA);
}