src/compiler/tests/invalid/division_by_zero/division_by_zero.klt
var globalC: Int;

fun main (): None {
    print("Antes division");
    globalC = 4 / 0;
    print("La division es %d", globalC);
}